<resources>
    <string name="app_name">Shooter_login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="full">full</string>
    <string name="fullname">fullname</string>
    <string name="SingUpHere">Create a new accaunt?SingUp</string>
    <string name="LoginHere">Already have account?Login</string>
</resources>