<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <!--name page-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sing up"
        android:textSize="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--username-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:hint="@string/username"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="246dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/ic_baseline_person"/>/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--fullname-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:hint="@string/fullname"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="316dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/ic_baseline_perm_contact_calendar_24"/>/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:hint="@string/Email"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="386dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/ic_baseline_email"/>/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:hint="@string/password"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="456dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/ic_baseline_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginHere"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        android:gravity="center"/>

    <Button
        android:id= "@+id/btnLogin"
        android:layout_width="165dp"
        android:layout_height="48dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="singUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        tools:layout_editor_absoluteX="131dp"
        android:background="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>